# owd

./: ApplyEEForceTorque.cpp  ApplyEEForceTorque.h  ApplyForceTraj.cpp  ApplyForceTraj.h  Butterworth.h  CMakeLists.txt  CoggingCompTraj.cpp  CoggingCompTraj.h  DataPlotter.pl  DataPlotterAF.pl  DoorTraj.cpp  DoorTraj.h  FTCheck.cpp  FTCheck.h  Follow.cpp  Follow.h  ForceController.cpp  ForceController.h  ForcePlotter.pl  ForceReadPlugin.cpp  ForceReadPlugin.h  GfePlugin.cpp  GfePlugin.hh  HelixPlugin.cpp  HelixPlugin.h  HybridPlugin.cpp  HybridPlugin.h  InsertKeyTraj.cpp  InsertKeyTraj.h  JacobianTest.cpp  JacobianTest.h  Makefile  MoveDirection.cpp  MoveDirection.h  MyPlugin.cpp  MyPlugin.hh  MyTraj.cpp  MyTraj.hh  Servo2Traj.cpp  Servo2Traj.h  (+56 more)
action/: herb.action
docs/: README-BUILDING-LAPACK
esdcan-pci200/lib32/: libntcan.so.3.1.5  ntcan.h
esdcan-pci200/src/: esdcan-pci200.ko
esdcan-usb331/lib32/: libntcan.so.3  ntcan.h
esdcan-usb331/src/: esdcan-usb331.ko
extras/: esdcan-pci200-linux_2_6_X-x86-3.8.3.tgz
msg/: Action.msg  AppletCommand.msg  AppletState.msg  BHState.msg  BHTactile.msg  CogSample.msg  ForceState.msg  HandOff.msg  Jacobian.msg  JointTraj.msg  MassProperties.msg  ObjectPose.msg  ObjectPoseList.msg  OccGrid3D.msg  RailsState.msg  TrajInfo.msg  TrajPoint.msg  WAMInternals.msg  WAMState.msg
openmath/: CMakeLists.txt  Inertia.cc  Inertia.hh  Makefile  R3.hh  R4.hh  R6.hh  SE3.cc  SE3.hh  SO3.cc  SO3.hh  ZYX.cc  ZYX.hh  catkin.cmake  main.cc
openwam/: BinaryData.cc  BinaryData.hh  Butterworth.h  CANbus.cc  CANbus.hh  CANbus_sim.cc  CANdefs.hh  CMakeLists.txt  ConstrainedForceTrajectory.cc  ConstrainedForceTrajectory.hh  ControlLoop.cc  ControlLoop.hh  ControlLoop_sim.cc  Controller.hh  DH.hh  DataPlotter.pl  DataPlotterAll.pl  DataRecorder.cc  DataRecorder.hh  Dynamics.cc  Dynamics.hh  FK.cc  ForceTrajectory.hh  Group.cc  Group.hh  JSController.cc  JSController.hh  Joint.cc  Joint.hh  JointCtrl.hh  JointCtrlPID.hh  JointCtrlSea.cc  JointCtrlSea.hh  JointsCtrl.hh  JointsTraj.hh  Kinematics.cc  Kinematics.hh  Link.hh  MTLogger.h  MacAccelPulse.hh  (+63 more)
openwam/positionInterface/: CMakeLists.txt  SmoothArm.cc  SmoothArm.h  SmoothJoint.cc  SmoothJoint.h
openwam/positionInterface/preportCode/: SmoothArm.cc  SmoothArm.h  SmoothArmJitter.cc  SmoothArmJitter.h  SmoothArmLoose.cc  SmoothArmLoose.h  SmoothJoint.cc  SmoothJoint.h  SmoothJointLoose.cc  SmoothJointLoose.h  SmoothTest.cc  SmoothTestFull.cc
owd/: CMakeLists.txt  bhand.dox  bhd280.cc  bhd280.hh  btutil_changeID.h  btutil_paramDefaults.h  catkin.cmake  detect_cpu.cmake  irs.patch  mainpage.dox  manifest.xml  openwamdriver.cpp  openwamdriver.h  owd.cpp  package.xml  puck_setprop.cpp  synctest.cpp
owd/openmath/: SE3.cc  catkin.cmake
owd/openwam/: BinaryData.cc  CANbus.cc  CANbus.hh  CANbus_sim.cc  JointCtrlPID.hh  MacQuinticSegment.cc  WAM.cc  WAM.hh  catkin.cmake
owd_msgs/: CMakeLists.txt  package.xml
owd_msgs/msg/: ServoOpt.msg
owd_msgs/srv/: AddOrTrajectory.srv
owd_plugin_example/: MyPlugin.hh
owd_plugins/: ApplyEEForceTorque.h  ApplyForceTraj.cpp  CoggingCompTraj.cpp  DataPlotterAF.pl  DataPlotterDoor.pl  FTCheck.h  HybridPlugin.cpp  HybridPlugin.h  InsertKeyTraj.cpp  JacobianTest.cpp  JacobianTest.h  Servo2Traj.cpp  TeachandPlay.cpp  Vibration.h  WSTraj.cpp  WSTraj.h  breakaway_check.py  cogging_reverse.pl  random_pushing.py
owd_plugins/srv/: CoggingComp.srv
pantilt/: CMakeLists.txt  bhd.launch  bhd280.cc  bhd280.hh  cantest.cc  catkin.cmake  development.dox  ft.hh  mainpage.dox  manifest.xml  openwamdriver.cpp  openwamdriver.h  owd.cpp  owd.xml  owd_traj_timer.cpp  package.xml  pantilt.launch  puck2.tek.r185  puck_getprops.cpp  test.cpp
pantilt/openmath/: catkin.cmake
pantilt/openwam/: CANbus.cc  CANbus.hh  CANbus_sim.cc  CANdefs.hh  CMakeLists.txt  DH.hh  DataPlotterAll.pl  Dynamics.cc  JSController.cc  JSController.hh  Joint.cc  Joint.hh  JointCtrlPID.hh  Kinematics.cc  Link.hh  Motor.cc  Motor.hh  ParaJointTraj.cc  ParabolicSegment.cc  Plugin.hh  Puck.cc  Puck.hh  StepTraj.cc  WAM.cc  WAM.hh  catkin.cmake  rosbuild.cmake
srv/: AddMyTrajectory.srv  AddTimedTrajectory.srv  AddTrajectory.srv  AddWSTraj.srv  ApplyForce.srv  ArmConfigCheck.srv  GetHandProperty.srv  MoveHand.srv  OpenDoor.srv  PauseTrajectory.srv  Play.srv  ReplaceTrajectory.srv  SetExtraMass.srv  SetFingerCompliant.srv  SetForceInputThreshold.srv  SetHandProperty.srv  SetJointStiffness.srv  SetSpeed.srv  SetStiffness.srv  SetTactileInputThreshold.srv  StartFollow.srv  StopTeach.srv
xenomai/include/: xeno_config.h
xenomai/lib/: libnative.so.1.0.0  libpsos.so.0.0.0  libpthread_rt.so.1  libpthread_rt.so.1.0.0  librtai.so.0.0.0  librtdk.so.0.0.0  librtdm.so.1.0.0  libuitron.so.0.0.0  libvrtx.so.0  libvrtx.so.0.0.0  libvxworks.so.1  libvxworks.so.1.0.0
